# advent-of-code

./: .gitignore  pyproject.toml
aoc/: _solution_template.py  helpers.py  new_day.py  run_latest.py
aoc/lib/: __init__.py  algorithms.py  graph.py  grid.py
aoc/year23/day01/part1/: solution.py
aoc/year23/day01/part2/: solution.py
aoc/year23/day02/part1/: solution.py
aoc/year23/day02/part2/: solution.py
aoc/year23/day03/part1/: solution.py
aoc/year23/day03/part2/: solution.py
aoc/year23/day04/part1/: solution.py
aoc/year23/day04/part2/: solution.py
aoc/year23/day05/part1/: solution.py
aoc/year23/day05/part2/: solution.py
aoc/year23/day06/part1/: solution.py
aoc/year23/day06/part2/: solution.py
aoc/year23/day07/part1/: solution.py
aoc/year23/day07/part2/: solution.py
aoc/year23/day08/part1/: solution.py
aoc/year23/day08/part2/: solution.py
aoc/year23/day09/part1/: solution.py
aoc/year23/day09/part2/: solution.py
aoc/year23/day10/part1/: solution.py
aoc/year23/day10/part2/: solution.py
aoc/year23/day11/part1/: solution.py
aoc/year23/day11/part2/: solution.py
aoc/year23/day12/part1/: solution.py
aoc/year23/day12/part2/: solution.py
aoc/year23/day14/part1/: solution.py
aoc/year23/day14/part2/: solution.py
aoc/year23/day15/part1/: solution.py
aoc/year23/day15/part2/: solution.py
aoc/year23/day17/part1/: solution.py
aoc/year23/day17/part2/: solution.py
aoc/year23/day19/part1/: solution.py
aoc/year23/day19/part2/: solution.py
aoc/year24/day01/part1/: solution.py
aoc/year24/day01/part2/: solution.py
(+63 files in other folders)
