[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Florian Daude <floriandaude@hotmail.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
httpx = "^0.25.2"
typer = "^0.9.0"
rich = "^13.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 100

[tool.ruff.format]
exclude = []
indent-style = "space"
line-ending = "lf"
quote-style = "single"
skip-magic-trailing-comma = true
